@@ -51,6 +51,11 @@ struct timezone {
 };
 #endif
 
+#if defined(HAVE___SYSCALL) && !defined(__syscall)
+/* Mac OS X has __syscall but doen't defined in headers */
+off_t __syscall(quad_t number, ...);
+#endif
+
 #ifdef RUBY_EXPORT
 #undef RUBY_EXTERN
 #endif
